fix invisible select bug via css

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -25,6 +25,10 @@ body{
     z-index: -1;
 }
 
+#id_product_size{
+    display: block;
+}
+
 @media (min-width: 992px) {
     .container{
         max-width: 90%;
